# src/routes/campaign.route.js
@@ -1,0 +1,23 @@
+import { Router } from "express";
+import { authMiddleware } from "../middlewares/auth.middleware.js";
+import {
+  createCampaign,
+  getCampaigns,
+  getCampaign,
+  updateCampaign,
+  deleteCampaign,
+  getCampaignStats,
+} from "../controllers/campaign.controller.js";
+
+const router = Router();
+
+router.use(authMiddleware);
+
+router.post("/", createCampaign);
+router.get("/", getCampaigns);
+router.get("/:id", getCampaign);
+router.put("/:id", updateCampaign);
+router.delete("/:id", deleteCampaign);
+router.get("/:id/stats", getCampaignStats);
+
+export default router;
