# src/routes/index.js
@@ -3,6 +3,7 @@ import authRoutes from "./auth.route.js";
 import profileRoutes from "./profile.route.js";
 import linkRoutes from "./link.route.js";
 import uploadRoutes from "./upload.route.js";
+import campaignRoutes from "./campaign.route.js";
 
 const router = Router();
 
@@ -10,5 +11,6 @@ router.use("/auth", authRoutes);
 router.use("/profile", profileRoutes);
 router.use("/links", linkRoutes);
 router.use("/upload", uploadRoutes);
+router.use("/campaigns", campaignRoutes);
 
 export default router;
